# whispefy

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  example.env  pyproject.toml
.github/workflows/: pages.yml  tests.yml
docs/: architecture.md  getting-started.md  index.md  mkdocs.yml
docs/pages/: architecture.md  getting-started.md  index.md
docs/pages/stylesheets/: extra.css
docs/stylesheets/: extra.css
scripts/: check-deps.sh  start.sh
tests/: test_audio.py  test_imports.py  test_insertion.py  test_pipeline.py  test_prompts.py  test_routes.py
whispefy/: __init__.py  app.py  audio.py  config.py  docs.py  groq_pipeline.py  insertion.py  notifications.py  server.py
